# trabalho

./: CMakeLists.txt  Makefile  README.md  config.txt  main  save.txt
App/: main.cpp  server.cpp
Include/Controllers/jogo/: jogo.hpp
Include/Models/bolinha/: bolinha.hpp
Include/Models/cenarioJogo/: cenarioJogo.hpp
Include/Models/personagem/: personagem.hpp
Include/Views/: view.hpp
src/Controllers/imageprocessing/: imageprocessing.cpp
src/Controllers/jogo/: jogo.cpp
src/Controllers/servidor/: servidor.cpp
src/Models/bolinha/: bolinha.cpp
src/Models/cenarioJogo/: cenarioJogo.cpp
src/Models/personagem/: personagem.cpp
src/Views/: view.cpp
tests/: linear  mapping  multi_process  multi_thread
tests/src/: mapping.c
